test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-25 21:19:15.129213

